--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -33,6 +33,7 @@ rand = "0.8"
 chrono = { version = "0.4", features = ["serde"] }
 futures = "0.3"
 bytes = { version = "1.0", features = ["serde"] }
+qdrant-client = "1.14.0"
 
 [dev-dependencies]
 tokio-test = "0.4"
