--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -34,11 +34,23 @@ chrono = { version = "0.4", features = ["serde"] }
 futures = "0.3"
 bytes = { version = "1.0", features = ["serde"] }
 qdrant-client = "1.14.0"
+flate2 = "1.0"
+candle-core = { version = "0.3", optional = true }
+candle-nn = { version = "0.3", optional = true }
+candle-transformers = { version = "0.3", optional = true }
+tokenizers = { version = "0.15", optional = true }
+hf-hub = { version = "0.3", optional = true }
 
 [dev-dependencies]
 tokio-test = "0.4"
 tempfile = "3.0"
 criterion = "0.5"
+
+[features]
+default = ["vector-db"]
+vector-db = []
+embedding-models = ["candle-core", "candle-nn", "candle-transformers", "tokenizers", "hf-hub"]
+full = ["vector-db", "embedding-models"]
 
 
 
