--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -18,6 +18,7 @@ path = "examples/full_system.rs"
 tokio = { version = "1.0", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+serde_yaml = "0.9"
 uuid = { version = "1.0", features = ["v4", "serde"] }
 thiserror = "1.0"
 anyhow = "1.0"
@@ -31,8 +32,10 @@ ed25519-dalek = { version = "2.0", features = ["serde"] }
 aes-gcm = "0.10"
 rand = "0.8"
 chrono = { version = "0.4", features = ["serde"] }
+dirs = "5.0"
 futures = "0.3"
 bytes = { version = "1.0", features = ["serde"] }
+tempfile = "3.0"
 qdrant-client = "1.14.0"
 flate2 = "1.0"
 candle-core = { version = "0.3", optional = true }
@@ -40,6 +43,7 @@ candle-nn = { version = "0.3", optional = true }
 candle-transformers = { version = "0.3", optional = true }
 tokenizers = { version = "0.15", optional = true }
 hf-hub = { version = "0.3", optional = true }
+regex = "1.0"
 
 [dev-dependencies]
 tokio-test = "0.4"
