--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -14,6 +14,10 @@ path = "examples/basic_agent.rs"
 [[example]]
 name = "full_system"
 path = "examples/full_system.rs"
+
+[[bin]]
+name = "symbiont-mcp"
+path = "src/bin/symbiont_mcp.rs"
 [dependencies]
 tokio = { version = "1.0", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
@@ -44,6 +48,13 @@ candle-transformers = { version = "0.3", optional = true }
 tokenizers = { version = "0.15", optional = true }
 hf-hub = { version = "0.3", optional = true }
 regex = "1.0"
+clap = { version = "4.0", features = ["derive"] }
+reqwest = { version = "0.11", features = ["json"] }
+git2 = "0.18"
+octocrab = "0.34"
+toml = "0.8"
+url = "2.4"
+base64 = "0.21"
 
 [dev-dependencies]
 tokio-test = "0.4"
