--- a/runtime/examples/openrouter_git_agent/Cargo.toml
+++ b/runtime/examples/openrouter_git_agent/Cargo.toml
@@ -20,6 +20,7 @@ serde_yaml = "0.9"
 toml = "0.8"
 tempfile = "3.0"
 dotenv = "0.15"
+chrono = { version = "0.4", features = ["serde"] }
 
 [[bin]]
 name = "openrouter_git_agent"
