Add HTTP API implementation
- Add API server with configurable address and port
- Add comprehensive route handlers for tool review, resource management, and context operations
- Add proper middleware for CORS, logging, and error handling
- Add structured API types and trait definitions
- Update lib.rs to expose API module
- Update Cargo.toml with required HTTP dependencies

--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -56,6 +56,12 @@ toml = "0.8"
 url = "2.4"
 base64 = "0.21"
 
+# HTTP API dependencies (optional)
+axum = { version = "0.7", optional = true }
+tower = { version = "0.4", optional = true }
+tower-http = { version = "0.5", features = ["cors", "trace"], optional = true }
+tokio-tungstenite = { version = "0.21", optional = true }
+
 [dev-dependencies]
 tokio-test = "0.4"
 tempfile = "3.0"
@@ -65,7 +71,8 @@ criterion = "0.5"
 default = ["vector-db"]
 vector-db = []
 embedding-models = ["candle-core", "candle-nn", "candle-transformers", "tokenizers", "hf-hub"]
-full = ["vector-db", "embedding-models"]
+http-api = ["axum", "tower", "tower-http", "tokio-tungstenite"]
+full = ["vector-db", "embedding-models", "http-api"]
 
 
 
