Add secure OSS sync workflow and enterprise infrastructure
- Gitea CI/CD workflow for automated OSS sync to GitHub
- Secure sync script with enterprise content filtering
- Git hooks for public/private repository differentiation
- GitHub Actions workflow for Jekyll documentation deployment
- Enterprise documentation structure support
- Security-first architecture keeping sync tooling private

--- a/.gitignore
+++ b/.gitignore
@@ -326,12 +326,6 @@ dist
 .roomodes
 .roo
 
-# Never Enterprise in OSS
-enterprise/
-
-# Internal sync and security scripts (private only)
-.gitea/
-scripts/sync_oss_to_github.sh
-scripts/install-hooks.sh
-scripts/pre-commit
-docs/OSS_SYNC_SETUP.md
+# Internal sync and security scripts (keep private, don't sync to OSS)
+# Note: enterprise/ folder is intentionally NOT ignored here - it should be
+# committed to Gitea but excluded only during OSS sync by the sync script
