upda env files remove schemapin path depricated

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# Symbiont Environment Configuration
+# Symbiont OSS Environment Configuration
 # Copy this file to .env and replace with actual values
 
 # ==============================================================================
@@ -58,19 +58,6 @@ REDIS_URL=redis://localhost:6379
 QDRANT_URL=http://localhost:6333
 
 # ==============================================================================
-# SECURITY & CRYPTOGRAPHY
-# ==============================================================================
-
-# Path to SchemaPin signing keys directory
-SCHEMAPIN_KEY_PATH=/path/to/signing/keys
-
-# SchemaPin CLI binary path (optional, uses system PATH if not specified)
-SCHEMAPIN_BINARY_PATH=/usr/local/bin/schemapin-cli
-
-# Security policy file path (optional)
-SECURITY_POLICY_FILE=./security_policies.yaml
-
-# ==============================================================================
 # APPLICATION CONFIGURATION
 # ==============================================================================
 
@@ -121,18 +108,7 @@ TEMPERATURE=0.1
 # Default AI model for OpenRouter
 OPENROUTER_MODEL=anthropic/claude-3.5-sonnet
 
-# Enable/disable features (true/false)
-ENABLE_SCHEMAPIN=false
-ENABLE_SANDBOX=false
+# Enable/disable basic features (true/false)
 ENABLE_COMPRESSION=true
 ENABLE_BACKUPS=true
 ENABLE_SAFETY_CHECKS=true
-
-# Sandbox security tier: Tier1, Tier2, Tier3
-SANDBOX_TIER=Tier2
-
-# Risk threshold: low, medium, high
-RISK_THRESHOLD=medium
-
-# Default autonomy level: manual, auto-backup, autonomous
-DEFAULT_AUTONOMY_LEVEL=auto-backup
