--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ thiserror = "1.0"
 tracing = "0.1"
 tracing-subscriber = "0.3"
 uuid = { version = "1.0", features = ["v4", "serde"] }
+base64ct = "=1.6.0"  # Force exact compatible version that doesn't require edition2024
 
 [profile.release]
 # Workspace-wide release optimizations
