--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -3,6 +3,8 @@ name: Deploy OSS Documentation
 on:
   push:
     branches: [ main ]
+    tags:
+      - 'v*'
     paths:
       - 'docs/**'
       - '.github/workflows/docs.yml'
