--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -91,6 +91,8 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     needs: build
+    # Only deploy to github-pages environment from main branch
+    if: github.ref == 'refs/heads/main'
     outputs:
       page_url: ${{ steps.deployment.outputs.page_url }}
     steps:
@@ -102,7 +104,8 @@ jobs:
     name: Validate Deployment
     runs-on: ubuntu-latest
     needs: deploy
-    if: success()
+    # Only validate when deployment actually happened (main branch)
+    if: success() && github.ref == 'refs/heads/main'
     steps:
       - name: Check deployment
         run: |
